// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom basepath 1`] = `
<div
  className="Pinpoint Header Prebuilt test-custom"
>
  <div
    className="top"
  >
    <div
      className="left"
    >
      <a
        aria-label="Header Logo Home Page"
        className="Pinpoint Internal Link Pinpoint Logo sm Prebuilt"
        href="https://pinpoint.com"
        title="Header Logo Home Page"
      >
        <img
          alt=""
          className="Pinpoint Image image"
          decoding="async"
          height={320}
          loading="lazy"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
          width={320}
        />
      </a>
    </div>
    <div
      className="right"
    >
      <div
        className="Pinpoint Search Bar Prebuilt"
      >
        <svg
          aria-hidden="true"
          className="icon"
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          height={16}
          role="img"
          viewBox="0 0 512 512"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
          />
        </svg>
        <form
          className="form"
          onSubmit={[Function]}
        >
          <input
            className="input"
            onChange={[Function]}
            placeholder="Search"
            value=""
          />
        </form>
      </div>
      <div
        className="Pinpoint ThemeToggle Prebuilt"
      >
        <button
          aria-label="Toggle Theme"
          className="mode"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="center"
  >
    <a
      className="link"
      onClick={[Function]}
      title="Pinpoint Changelog"
    >
      <h1
        className="title"
      >
        Pinpoint Changelog
      </h1>
    </a>
    <div
      className="description"
    >
      New updates and improvements to Pinpoint
    </div>
    <div
      className="action"
    >
      <a
        className="Pinpoint Internal Link Pinpoint Subscribe transition-opacity opacity-0 Prebuilt"
        href="https://changelog.pinpoint.com/blog/subscription/subscribe"
      >
        <svg
          aria-hidden="true"
          className="icon"
          data-icon="envelope"
          data-prefix="fas"
          focusable="false"
          height={14}
          role="img"
          viewBox="0 0 512 512"
          width={14}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
            fill="currentColor"
          />
        </svg>
        <span
          className="text"
        >
          Subscribe to Updates
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Test custom className 1`] = `
<div
  className="Pinpoint Header Prebuilt test-custom"
>
  <div
    className="top"
  >
    <div
      className="left"
    >
      <a
        aria-label="Header Logo Home Page"
        className="Pinpoint Internal Link Pinpoint Logo sm Prebuilt"
        href="https://pinpoint.com"
        title="Header Logo Home Page"
      >
        <img
          alt=""
          className="Pinpoint Image image"
          decoding="async"
          height={320}
          loading="lazy"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
          width={320}
        />
      </a>
    </div>
    <div
      className="right"
    >
      <div
        className="Pinpoint Search Bar Prebuilt"
      >
        <svg
          aria-hidden="true"
          className="icon"
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          height={16}
          role="img"
          viewBox="0 0 512 512"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
          />
        </svg>
        <form
          className="form"
          onSubmit={[Function]}
        >
          <input
            className="input"
            onChange={[Function]}
            placeholder="Search"
            value=""
          />
        </form>
      </div>
      <div
        className="Pinpoint ThemeToggle Prebuilt"
      >
        <button
          aria-label="Toggle Theme"
          className="mode"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="center"
  >
    <a
      className="link"
      onClick={[Function]}
      title="Pinpoint Changelog"
    >
      <h1
        className="title"
      >
        Pinpoint Changelog
      </h1>
    </a>
    <div
      className="description"
    >
      New updates and improvements to Pinpoint
    </div>
    <div
      className="action"
    >
      <a
        className="Pinpoint Internal Link Pinpoint Subscribe transition-opacity opacity-100 Prebuilt"
        href="https://changelog.pinpoint.com/subscription/subscribe"
      >
        <svg
          aria-hidden="true"
          className="icon"
          data-icon="envelope"
          data-prefix="fas"
          focusable="false"
          height={14}
          role="img"
          viewBox="0 0 512 512"
          width={14}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
            fill="currentColor"
          />
        </svg>
        <span
          className="text"
        >
          Subscribe to Updates
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Test default state 1`] = `
<div
  className="Pinpoint Header Prebuilt "
>
  <div
    className="top"
  >
    <div
      className="left"
    >
      <a
        aria-label="Header Logo Home Page"
        className="Pinpoint Internal Link Pinpoint Logo sm Prebuilt"
        href="https://pinpoint.com"
        title="Header Logo Home Page"
      >
        <img
          alt=""
          className="Pinpoint Image image"
          decoding="async"
          height={320}
          loading="lazy"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
          width={320}
        />
      </a>
    </div>
    <div
      className="right"
    >
      <div
        className="Pinpoint Search Bar Prebuilt"
      >
        <svg
          aria-hidden="true"
          className="icon"
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          height={16}
          role="img"
          viewBox="0 0 512 512"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
          />
        </svg>
        <form
          className="form"
          onSubmit={[Function]}
        >
          <input
            className="input"
            onChange={[Function]}
            placeholder="Search"
            value=""
          />
        </form>
      </div>
      <div
        className="Pinpoint ThemeToggle Prebuilt"
      >
        <button
          aria-label="Toggle Theme"
          className="mode"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="center"
  >
    <a
      className="link"
      onClick={[Function]}
      title="Pinpoint Changelog"
    >
      <h1
        className="title"
      >
        Pinpoint Changelog
      </h1>
    </a>
    <div
      className="description"
    >
      New updates and improvements to Pinpoint
    </div>
    <div
      className="action"
    >
      <a
        className="Pinpoint Internal Link Pinpoint Subscribe transition-opacity opacity-0 Prebuilt"
        href="https://changelog.pinpoint.com/subscription/subscribe"
      >
        <svg
          aria-hidden="true"
          className="icon"
          data-icon="envelope"
          data-prefix="fas"
          focusable="false"
          height={14}
          role="img"
          viewBox="0 0 512 512"
          width={14}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
            fill="currentColor"
          />
        </svg>
        <span
          className="text"
        >
          Subscribe to Updates
        </span>
      </a>
    </div>
  </div>
</div>
`;
